# croquis

./: CMakeLists.txt  CONTRIBUTING.md  COPYRIGHT  LICENSE-MIT  README.md
.github/workflows/: ci-test.yaml  ci-test.yml  cmake.yml  main.yml
include/croquis/container/: compacting_map.hpp
include/croquis/hash/: hash.hpp  util.hpp
include/croquis/sketch/: Promotable.hpp  Sketch.hpp  Sparse.hpp  interface.hpp
include/croquis/stream/: Distributed.hpp  Element.hpp  Multi.hpp  Summary.hpp  interface.hpp
include/croquis/transform/: CountSketch.hpp  FWHT.hpp
include/croquis/transform/fwht/: utils.hpp  utils_temp.hpp
include/croquis/util/: check.hpp  mpitests.hpp  sketch_types.hpp  tests.hpp  ygm_tests.hpp
include/krowkee/container/: compacting_map.hpp
include/krowkee/hash/: hash.hpp  util.hpp
include/krowkee/sketch/: Dense.hpp  Promotable.hpp  Sketch.hpp  Sparse.hpp  interface.hpp
include/krowkee/stream/: Distributed.hpp  Element.hpp  Multi.hpp  Summary.hpp  interface.hpp
include/krowkee/transform/: CountSketch.hpp  FWHT.hpp
include/krowkee/transform/fwht/: utils.hpp  utils_temp.hpp
include/krowkee/util/: assert.hpp  check.hpp  cmap_types.hpp  compact_iterable_map.hpp  mpitests.hpp  sketch_types.hpp  tests.hpp  ygm_tests.hpp
test/: CMakeLists.txt  communicable_linearsketch_test.cpp  compact_iterable_map_test.cpp  compact_map_benchmark.cpp  compacting_map_test.cpp  distributed_test.cpp  hash_test.cpp  local_linearsketch_test.cpp  multisketch_test.cpp  test_fwht_utils.cpp
test/include/: check_archive.hpp  check_ygm_archive.hpp  communicable_sketches.hpp  linearsketch_test.hpp  local_sketches.hpp
